<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|bottom"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <Button
            android:id="@+id/my_reading_article_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:backgroundTint="@color/ToolbarWhite"
            android:text="@string/section_article"
            android:visibility="visible"/>
        <Button
            android:id="@+id/my_reading_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/ToolbarWhite"
            android:text="@string/login_submit"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/my_reading_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/ToolbarWhite"
            android:text="@string/login_back"/>
        <Button
            android:id="@+id/my_reading_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/ToolbarWhite"
            android:text="@string/next_article"/>
        </LinearLayout>
</LinearLayout>